--- a/content/resources/cms-615f13.md
+++ b/content/resources/cms-615f13.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Detail of a screenshot of The Cat and the Coup, a videogame by Peter
   Brinson and Kurosh ValaNejad. Used with permission.
-file: /media/courses/cms-615-games-for-social-change-fall-2013/305c942676dd31872177cf98a9972314_cms-615f13.jpg
+file: /courses/cms-615-games-for-social-change-fall-2013/305c942676dd31872177cf98a9972314_cms-615f13.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Detail of a screenshot of [The Cat and the Coup](http://www.thecatandthecoup.com/),
@@ -16,3 +16,5 @@ resourcetype: Image
 title: The Cat and the Coup
 uid: 305c9426-76dd-3187-2177-cf98a9972314
 ---
+Detail of a screenshot of The Cat and the Coup, a videogame by Peter Brinson and Kurosh ValaNejad. Used with permission.
+
