--- a/content/resources/cms-615f13.md
+++ b/content/resources/cms-615f13.md
@@ -11,10 +11,10 @@ image_metadata:
   image-alt: The ghost of Mohammed Mossadegh shuffles sadly through a phantasmagoric
     protest of Persian bricolage. But where is his cat?
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: The Cat and the Coup
 uid: 305c9426-76dd-3187-2177-cf98a9972314
 ---
 Detail of a screenshot of The Cat and the Coup, a videogame by Peter Brinson and Kurosh ValaNejad. Used with permission.
-
