--- a/content/resources/cms-615f13.md
+++ b/content/resources/cms-615f13.md
@@ -6,9 +6,8 @@ file: /courses/cms-615-games-for-social-change-fall-2013/305c942676dd31872177cf9
 file_size: 36266
 file_type: image/jpeg
 image_metadata:
-  caption: Detail of a screenshot of {{% resource_link "317e0821-0164-4300-93e7-a1379a7406bb"
-    "The Cat and the Coup" %}}, a videogame by Peter Brinson and Kurosh ValaNejad.
-    (Used with permission.)
+  caption: Detail of a screenshot of [The Cat and the Coup](http://www.thecatandthecoup.com/),
+    a videogame by Peter Brinson and Kurosh ValaNejad. (Used with permission.)
   credit: Used with permission.
   image-alt: The ghost of Mohammed Mossadegh shuffles sadly through a phantasmagoric
     protest of Persian bricolage. But where is his cat?
