--- a/content/resources/cms-615f13.md
+++ b/content/resources/cms-615f13.md
@@ -2,11 +2,12 @@
 content_type: resource
 description: Detail of a screenshot of The Cat and the Coup, a videogame by Peter
   Brinson and Kurosh ValaNejad. Used with permission.
-file: /ol-ocw-studio-app/courses/cms-615-games-for-social-change-fall-2013/305c942676dd31872177cf98a9972314_cms-615f13.jpg
+draft: false
+file: /courses/cms-615-games-for-social-change-fall-2013/305c942676dd31872177cf98a9972314_cms-615f13.jpg
 file_size: 36266
 file_type: image/jpeg
 image_metadata:
-  caption: Detail of a screenshot of [The Cat and the Coup](http://www.thecatandthecoup.com/),
+  caption: Detail of a screenshot of [The Cat and the Coup](http://thecatandthecoup.com/),
     a videogame by Peter Brinson and Kurosh ValaNejad. (Used with permission.)
   credit: Used with permission.
   image-alt: The ghost of Mohammed Mossadegh shuffles sadly through a phantasmagoric
@@ -17,5 +18,15 @@ ocw_type: OCWImage
 resourcetype: Image
 title: The Cat and the Coup
 uid: 305c9426-76dd-3187-2177-cf98a9972314
+video_files:
+  archive_url: ''
+  video_captions_file: ''
+  video_thumbnail_file: ''
+  video_transcript_file: ''
+video_metadata:
+  video_speakers: ''
+  video_tags: ''
+  youtube_description: ''
+  youtube_id: ''
 ---
 Detail of a screenshot of The Cat and the Coup, a videogame by Peter Brinson and Kurosh ValaNejad. Used with permission.
