--- a/content/resources/cms-615f13.md
+++ b/content/resources/cms-615f13.md
@@ -7,8 +7,9 @@ file: /ol-ocw-studio-app/courses/cms-615-games-for-social-change-fall-2013/305c9
 file_size: 36266
 file_type: image/jpeg
 image_metadata:
-  caption: Detail of a screenshot of [The Cat and the Coup](http://thecatandthecoup.com/),
-    a videogame by Peter Brinson and Kurosh ValaNejad. (Used with permission.)
+  caption: Detail of a screenshot of {{% resource_link "c6b4d8a0-cc0c-4f6e-b5d7-493b9e6132ec"
+    "The Cat and the Coup" %}}, a videogame by Peter Brinson and Kurosh ValaNejad.
+    (Used with permission.)
   credit: Used with permission.
   image-alt: The ghost of Mohammed Mossadegh shuffles sadly through a phantasmagoric
     protest of Persian bricolage. But where is his cat?
